WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206578
[CSS Backgrounds] WPT test css/css-backgrounds/animations/border-image-width-interpolation.html asserts
https://bugs.webkit.org/show_bug.cgi?id=206578
Summary
[CSS Backgrounds] WPT test css/css-backgrounds/animations/border-image-width-...
Carlos Alberto Lopez Perez
Reported
2020-01-22 04:33:19 PST
The test imported/w3c/web-platform-tests/css/css-backgrounds/animations/border-image-width-interpolation.html crashes in Debug build: 12:30:18.878 119733 worker/0 imported/w3c/web-platform-tests/css/css-backgrounds/animations/border-image-width-interpolation.html crashed, (stderr lines): 12:30:18.879 119733 SHOULD NEVER BE REACHED 12:30:18.879 119733 ../../Source/WebCore/css/CSSPrimitiveValue.cpp(358) : void WebCore::CSSPrimitiveValue::init(const WebCore::Length&) 12:30:18.879 119733 1 0x7fe956cdb911 /home/igalia/clopez/webkit/webkit/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(WTFCrash+0x9) [0x7fe956cdb911] 12:30:18.879 119733 2 0x7fe9631dda0d /home/igalia/clopez/webkit/webkit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WTF::CrashOnOverflow::overflowed()+0) [0x7fe9631dda0d] 12:30:18.879 119733 3 0x7fe96545b709 /home/igalia/clopez/webkit/webkit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::CSSPrimitiveValue::init(WebCore::Length const&)+0x1f1) [0x7fe96545b709] 12:30:18.879 119733 4 0x7fe96545b392 /home/igalia/clopez/webkit/webkit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::CSSPrimitiveValue::CSSPrimitiveValue(WebCore::Length const&)+0x34) [0x7fe96545b392] 12:30:18.879 119733 5 0x7fe9653fd3e0 /home/igalia/clopez/webkit/webkit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WTF::Ref<WebCore::CSSPrimitiveValue, WTF::DumbPtrTraits<WebCore::CSSPrimitiveValue> > WebCore::CSSPrimitiveValue::create<WebCore::Length const&>(WebCore::Length const&)+0x3a) [0x7fe9653fd3e0] 12:30:18.879 119733 6 0x7fe9653f6a5f /home/igalia/clopez/webkit/webkit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WTF::Ref<WebCore::CSSPrimitiveValue, WTF::DumbPtrTraits<WebCore::CSSPrimitiveValue> > WebCore::CSSValuePool::createValue<WebCore::Length const&>(WebCore::Length const&)+0x2e) [0x7fe9653f6a5f] 12:30:18.879 119733 7 0x7fe9653c8da6 /home/igalia/clopez/webkit/webkit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0xce39da6) [0x7fe9653c8da6] 12:30:18.879 119733 8 0x7fe9653df1e9 /home/igalia/clopez/webkit/webkit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::ComputedStyleExtractor::valueForPropertyInStyle(WebCore::RenderStyle const&, WebCore::CSSPropertyID, WebCore::RenderElement*)+0x89d9) [0x7fe9653df1e9] 12:30:18.879 119733 9 0x7fe9653d67fe /home/igalia/clopez/webkit/webkit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::ComputedStyleExtractor::propertyValue(WebCore::CSSPropertyID, WebCore::EUpdateLayout)+0x262) [0x7fe9653d67fe] 12:30:18.879 119733 10 0x7fe9653d49c9 /home/igalia/clopez/webkit/webkit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue(WebCore::CSSPropertyID, WebCore::EUpdateLayout) const+0x6b) [0x7fe9653d49c9] 12:30:18.879 119733 11 0x7fe9653e2fb5 /home/igalia/clopez/webkit/webkit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::CSSComputedStyleDeclaration::getPropertyValue(WebCore::CSSPropertyID) const+0x2f) [0x7fe9653e2fb5] 12:30:18.879 119733 12 0x7fe9653e402e /home/igalia/clopez/webkit/webkit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::CSSComputedStyleDeclaration::getPropertyValue(WTF::String const&)+0xea) [0x7fe9653e402e] 12:30:18.879 119733 13 0x7fe966e3875f /home/igalia/clopez/webkit/webkit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0xe8a975f) [0x7fe966e3875f] 12:30:18.880 119733 14 0x7fe966e3e0d2 /home/igalia/clopez/webkit/webkit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0xe8af0d2) [0x7fe966e3e0d2] 12:30:18.880 119733 15 0x7fe966e387ca /home/igalia/clopez/webkit/webkit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::jsCSSStyleDeclarationPrototypeFunctionGetPropertyValue(JSC::JSGlobalObject*, JSC::CallFrame*)+0x2a) [0x7fe966e387ca] 12:30:18.880 119733 16 0x7fe90b9a2178 [0x7fe90b9a2178] 12:30:18.880 119733 LEAK: 1 WebPageProxy
Attachments
Patch
(26.19 KB, patch)
2021-03-29 01:06 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Patch
(25.95 KB, patch)
2021-03-29 09:39 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2021-03-29 01:06:38 PDT
Created
attachment 424531
[details]
Patch
Antoine Quint
Comment 2
2021-03-29 09:39:39 PDT
Created
attachment 424538
[details]
Patch
EWS
Comment 3
2021-03-30 12:02:20 PDT
Committed
r275221
: <
https://commits.webkit.org/r275221
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 424538
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-03-30 12:03:26 PDT
<
rdar://problem/76015252
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug